--- a/main.html
+++ b/main.html
@@ -8,6 +8,11 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<header>What is the capital of India?</header>
+	<input type="radio">New Delhi</input>
+	<br>
+	<input type="radio">Mumbai</input>
+	<blockquote <a href="https://en.wikipedia.org/wiki/New_Delhi"/>>New Delhi is the capital of India and an administrative district of NCT Delhi</blockquote>
     <script type="text/javascript" src="./script.js">
 </script>
 
