--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
 	<input type="radio">New Delhi</input>
 	<br>
 	<input type="radio">Mumbai</input>
-	<blockquote <a href="https://en.wikipedia.org/wiki/New_Delhi"/>>New Delhi is the capital of India and an administrative district of NCT Delhi</blockquote>
+	<blockquote <a href="https://en.wikipedia.org/wiki/New_Delhi" cite ="https://en.wikipedia.org/wiki/New_Delhi"/>>New Delhi is the capital of India and an administrative district of NCT Delhi</blockquote>
     <script type="text/javascript" src="./script.js">
 </script>
 
